<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_school"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_about_school">
            <menu>
                <item
                    android:id="@+id/nav_about_school_info"
                    android:title="@string/nav_about_school_info" />
                <item
                    android:id="@+id/nav_about_school_rings"
                    android:title="@string/nav_about_school_rings" />
                <item
                    android:id="@+id/nav_about_school_teachers"
                    android:title="@string/nav_about_school_teachers" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/nav_timetable"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/nav_rating"
        android:title="@string/nav_rating" />
    <item
        android:id="@+id/nav_task"
        android:title="@string/nav_task" />

</menu>
